# SocialUploadKit

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: minimal_upload.py
social_upload/: README.md  __init__.py  client.py  storage.py
social_upload/browser/: __init__.py  base.py  cloakbrowser_adapter.py  factory.py  patchright_adapter.py  playwright_adapter.py  settings.py
social_upload/cli/: __init__.py  sau_cli.py
